feat: tenant-aware repos + audit events
- Update repositories.py to include tenant_id in method signatures
- Update event_store.py to support tenant-scoped stream names
- Create audit logger with structured JSON logging and EventStore integration
- Update main.py to add audit calls in /v1/runs/plan endpoint
- Add comprehensive unit tests for audit functionality

--- a/apps/adk-orchestrator/config/base.yaml
+++ b/apps/adk-orchestrator/config/base.yaml
@@ -6,3 +6,13 @@ agents:
   sandbox: { enabled: true, timeout_seconds: 30, memory_limit_mb: 512 }
   memory:  { vector_store: false, history_limit: 100 }
   tools:   { auto_discover: true, validation: strict }
+auth:
+  issuer: "kyros-dev"
+  audience: "kyros-api"
+  alg: "HS256"
+  shared_secret_env: "JWT_SECRET"
+tenancy:
+  default_rate_rps: 5
+  default_model_caps: {}
+cors:
+  allowed_origins: ["http://localhost:3001"]
