feat: JWT auth + tenant context + CORS
- Add JWT authentication with HS256 algorithm
- Add Principal and TenantContext models for auth/tenant context
- Add CORS middleware with configurable allowed origins
- Add security headers middleware for enhanced security
- Add JWT dependencies and FastAPI integration
- Add development JWT token generator script
- Update /v1/runs/plan endpoint to require authentication
- Add comprehensive logging with request context

All tests passing:
- Valid JWT token → 200 OK
- Invalid token → 401 Unauthorized
- No token → 403 Forbidden
- CORS properly configured for localhost:3001

--- a/apps/adk-orchestrator/config/base.yaml
+++ b/apps/adk-orchestrator/config/base.yaml
@@ -14,5 +14,7 @@ auth:
 tenancy:
   default_rate_rps: 5
   default_model_caps: {}
+rate_limits:
+  default: "5/second"
 cors:
   allowed_origins: ["http://localhost:3001"]
