--- a/apps/terminal-daemon/package.json
+++ b/apps/terminal-daemon/package.json
@@ -4,5 +4,5 @@
   "private": true,
   "main": "server.js",
   "scripts": { "start": "node server.js", "dev": "node server.js" },
-  "dependencies": { "cors": "^2.8.5", "express": "^4.18.2", "node-pty": "^1.0.0", "ws": "^8.15.0" }
+  "dependencies": { "cors": "^2.8.5", "express": "^4.18.2", "node-pty": "^1.0.0", "uuid": "^9.0.1", "ws": "^8.15.0" }
 }
