--- a/.github/workflows/validate-api.yml
+++ b/.github/workflows/validate-api.yml
@@ -30,7 +30,7 @@ jobs:
       - name: Install dependencies
         run: |
           python -m pip install --upgrade pip
-          pip install fastapi uvicorn pydantic pydantic-settings PyYAML
+          pip install fastapi uvicorn pydantic pydantic-settings PyYAML PyJWT
           pip install openapi-spec-validator
 
       - name: Validate OpenAPI spec
