--- a/.github/workflows/validate-api.yml
+++ b/.github/workflows/validate-api.yml
@@ -30,11 +30,12 @@ jobs:
           pip install fastapi uvicorn pydantic pydantic-settings PyYAML openapi-spec-validator httpx aiosqlite PyJWT
       - name: Generate dev JWT
         run: |
-          python - <<'PY' >> $GITHUB_ENV
-import datetime, jwt
-token = jwt.encode({'sub': 'dev', 'exp': datetime.datetime.utcnow() + datetime.timedelta(minutes=5)}, 'dev-secret', algorithm='HS256')
-print(f'DEV_JWT={token}')
-PY
+          python - <<'PY' > dev.env
+          import datetime, jwt
+          token = jwt.encode({'sub': 'dev', 'exp': datetime.datetime.utcnow() + datetime.timedelta(minutes=5)}, 'dev-secret', algorithm='HS256')
+          print(f'DEV_JWT={token}')
+          PY
+          cat dev.env >> "$GITHUB_ENV"
       - name: Start orchestrator
         run: |
           uvicorn apps/adk-orchestrator.main:app --host 127.0.0.1 --port 8080 &
